--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   lottie: ^3.3.1
   google_nav_bar: ^5.0.7
   line_icons: ^2.0.1
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  image_picker: ^1.1.2
+
 
 dev_dependencies:
   flutter_test:
