--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   sqflite: ^2.4.2
   path_provider: ^2.1.5
   image_picker: ^1.1.2
-
+  animate_do: ^4.2.0
+  google_fonts: ^6.3.1
+  flutter_staggered_grid_view: ^0.7.0
+  font_awesome_flutter: ^10.10.0
 
 dev_dependencies:
   flutter_test:
